app01/alpine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
    spec:
      volumes:
        - name: rclone-config
          secret:
            secretName: blob-rclone-conf
        - name: mntdir
          hostPath:
            path: /mnt
      nodeSelector:
        disktype: MEM
      containers:
        - name: alpine-container
          image: alpine:latest
          command: ["sleep"]
          args: ["infinity"]
          volumeMounts:
            - mountPath: "/root/.config/rclone/rclone.conf"
              name: rclone-config
              subPath: rclone.conf
            - mountPath: /mnt
              name: mntdir
