app01/mzworker-go.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mzworker-go-deployment
spec:
  selector:
    matchLabels:
      app: mzworker-go
  template:
    metadata:
      labels:
        app: mzworker-go
    spec:
      volumes:
        - name: rclone-config
          secret:
            secretName: blob-rclone-conf
        - name: rclone-cache
          hostPath:
            path: /tmp/rclone-mzworker-cache
            type: DirectoryOrCreate
      nodeSelector:
        disktype: MEM
      containers:
        - name: mzworker-go
          securityContext:
            privileged: true
          image: ghcr.io/mnsrulz/mzworker-go-rclone:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/rcloneconfig/rclone.conf"
              name: rclone-config
              subPath: rclone.conf
            - mountPath: /cache
              name: rclone-cache
