app01/worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediacatalogworker
spec:
  selector:
    matchLabels:
      app: mediacatalogworker
  replicas: 1
  template:
    metadata:
      labels:
        app: mediacatalogworker
    spec:
      containers:
        - name: mediacatalog-worker
          image: ghcr.io/mnsrulz/mediacatalog-worker:latest
          imagePullPolicy: Always
