app01/copyparty.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty
spec:
  ports:
    - name: copyparty
      port: 80
      targetPort: 3923
  selector:
    app: copyparty

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
spec:
  selector:
    matchLabels:
      app: copyparty
  replicas: 1
  template:
    metadata:
      labels:
        app: copyparty
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: copypartydatadir
          hostPath:
            path: /mnt/copyparty
        - name: config-volume
          configMap:
            name: copyparty-config
      nodeSelector:
        disktype: SSD
      containers:
        - name: copyparty
          image: ghcr.io/9001/copyparty-ac:1.19.20
          imagePullPolicy: Always
          ports:
            - containerPort: 3923
          volumeMounts:
            - name: copypartydatadir
              mountPath: /w
            - name: config-volume
              mountPath: /etc/copyparty
