app01/immich.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich
spec:
  ports:
    - name: immichport
      port: 2283
      targetPort: 2283
  selector:
    app: immich
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
    spec:
      volumes:
        - name: rclone-config
          secret:
            secretName: blob-rclone-conf
        - name: immich-data
          emptyDir: {}
        - name: rclone-cache
          hostPath:
            path: /mnt/rclone-cache
            type: DirectoryOrCreate
      nodeSelector:
        disktype: MEM
      containers:
        - name: rclone
          securityContext:
            privileged: true
          image: rclone/rclone:v1.72-stable
          command:
            - "rclone"
            - "mount"
            - "-v"
            - "--allow-non-empty"
            - "--allow-other"
            - "--vfs-cache-mode=writes"
            - "--cache-dir=/mnt/cache"
            - "--vfs-cache-max-size=5G"
            - "--vfs-cache-max-age=30m"
            - "--vfs-read-chunk-size=8M"
            - "--vfs-read-chunk-size-limit=64M"
            - "--buffer-size=8M"
            - "--dir-cache-time=1m"
            - "--no-checksum"
            - "blobencrypted:/IDATA/media/"
            - "/mnt/data"
          volumeMounts:
            - mountPath: "/config/rclone/rclone.conf"
              name: rclone-config
              subPath: rclone.conf
            - mountPath: /mnt/data
              name: immich-data
              mountPropagation: Bidirectional
            - mountPath: /mnt/cache
              name: rclone-cache
        - name: immich
          image: ghcr.io/immich-app/immich-server:v2.3.1 
          securityContext:
            privileged: true
          ports:
            - containerPort: 2283
          volumeMounts:
            - name: immich-data
              mountPath: /mnt/data
              mountPropagation: Bidirectional
