app01/mzworker.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mzworker-service
spec:
  ports:
    - name: mzworkerport
      port: 8000
      targetPort: 8000
  selector:
    app: mzworker

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mzworker-deployment
spec:
  selector:
    matchLabels:
      app: mzworker
  template:
    metadata:
      labels:
        app: mzworker
    spec:
      volumes:
        - name: rclone-config
          secret:
            secretName: blob-rclone-conf
        - name: rclone-cache
          hostPath:
            path: /tmp/rclone-mzworker-cache
            type: DirectoryOrCreate
      nodeSelector:
        disktype: MEM
      containers: 
        - name: deno
          securityContext:
            privileged: true
          image: ghcr.io/mnsrulz/deno-rclone:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/rcloneconfig/rclone.conf"
              name: rclone-config
              subPath: rclone.conf
            - mountPath: /cache
              name: rclone-cache
