app01/n8n.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
spec:
  ports:
    - name: n8nport
      port: 5678
      targetPort: 5678
  selector:
    app: n8n
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-deployment
spec:
  selector:
    matchLabels:
      app: n8n
  replicas: 1
  template:
    metadata:
      labels:
        app: n8n
    spec:
      volumes:
        - name: n8n-data
          # emptyDir: {}
          hostPath:
            path: /mnt/n8n-data   # Change this path as needed
            type: DirectoryOrCreate
      nodeSelector:
        disktype: SSD
      containers:
        - name: n8n
          image: n8nio/n8n:2.1.4
          ports:
            - containerPort: 5678
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-data
