app01/plex.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex-service
spec:
  ports:
    - port: 32400
      targetPort: 32400
  selector:
    app: plex

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-deployment
spec:
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      volumes:
        - name: plexconfig # plex configuration data like library metadata 
          hostPath:
            path: /home/madhu/plexconfig
        - name: rclone-config
          secret:
            secretName: blob-rclone-conf
      nodeSelector:
        disktype: SSD
      containers:
        - name: plex
          securityContext:
            privileged: true
          image: ghcr.io/mnsrulz/plex-rclone:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /config
              name: plexconfig
            - mountPath: "/rcloneconfig/rclone.conf"
              name: rclone-config
              subPath: rclone.conf
          ports:
            - containerPort: 32400
