app01/reactive-resume-postgress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: reactiveresumepostgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: reactiveresumepostgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: reactiveresumepostgres
spec:
  serviceName: reactiveresumepostgres
  replicas: 1
  selector:
    matchLabels:
      app: reactiveresumepostgres
  template:
    metadata:
      labels:
        app: reactiveresumepostgres
    spec:
      nodeSelector:
        disktype: SSD
      containers:
        - name: reactiveresumepostgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: reactiveresumepostgres-pvc
