app01/reactive-resume-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: resume
spec:
  ports:
    - name: reactiveresumeport
      port: 3000
      targetPort: resume-http
  selector:
    app: reactiveresume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactiveresume
spec:
  selector:
    matchLabels:
      app: reactiveresume
  replicas: 1
  template:
    metadata:
      labels:
        app: reactiveresume
    spec:
      nodeSelector:
        disktype: MEM
      containers:
        - name: reactiveresume
          image: ghcr.io/amruthpillai/reactive-resume:v5.2.4
          ports:
            - name: resume-http
              containerPort: 3000
