app01/seawood.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs
spec:
  ports:
    - name: master
      port: 9333
    - name: volume
      port: 8080
    - name: filer
      port: 8888
    - name: s3
      port: 8333
  selector:
    app: seaweedfs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seaweedfs-deployment
spec:
  selector:
    matchLabels:
      app: seaweedfs
  template:
    metadata:
      labels:
        app: seaweedfs
    spec:
      volumes:
        - name: seawood-data
          hostPath:
            path: /var/lib/seaweedfs
      nodeSelector:
        disktype: SSD
      containers: 
        - name: seaweedfs
          image: chrislusf/seaweedfs:4.05_full
          command:
            - "weed"
            - "mini"
            - "-dir=/data"
          ports:
            - containerPort: 9333
            - containerPort: 8080
            - containerPort: 8888
            - containerPort: 8333
          volumeMounts:
            - mountPath: /data
              name: seawood-data
