app01/static-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: staticserver
spec:
  ports:
    - name: staicserverport
      port: 80
      targetPort: 80
  selector:
    app: staticserver

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staticserver
spec:
  selector:
    matchLabels:
      app: staticserver
  replicas: 1
  template:
    metadata:
      labels:
        app: staticserver
    spec:
      volumes:
        - name: staticdirectory
          hostPath:
            path: /home/madhu/live 
      nodeSelector:
        disktype: SSD
      containers:
        - name: staticserver
          image: joseluisq/static-web-server:2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /pserve
              name: staticdirectory
