app01/ytstreamer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ytstreamer
spec:
  ports:
    - name: mediastreamerport
      port: 8000
      targetPort: 8000
  selector:
    app: ytstreamer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ytstreamer
spec:
  selector:
    matchLabels:
      app: ytstreamer
  replicas: 1
  template:
    metadata:
      labels:
        app: ytstreamer
    spec:
      nodeSelector:
        disktype: MEM
      containers:
        - name: ytstreamer
          image: ghcr.io/mnsrulz/ytdlp-web:latest
          imagePullPolicy: Always
          
          ports:
            - containerPort: 8000
