app01/ingress-argoworkflow.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argoworkflow
  namespace: argo
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - argo.local
    secretName: wildcard-local-tls
  rules:
    - host: argo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-server
                port:
                  number: 2746
