app01/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediacatalogadmin
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - immich.local
    - resume.local
    - n8n.local
    - s3.local
    - plex.local
    - mzworker.local
    - duckdb.local
    secretName: wildcard-local-tls
  rules:
    - host: immich.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich
                port:
                  number: 2283
    - host: resume.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume
                port:
                  number: 3000
    - host: n8n.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port:
                  number: 5678
    - host: s3.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs
                port:
                  number: 8333
    - host: plex.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-service
                port:
                  number: 32400
    - host: mzworker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mzworker-service
                port:
                  number: 8000
    - host: duckdb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: duckdb
                port:
                  number: 4213
    - http:
        paths:
          - path: /streamer
            pathType: Prefix
            backend:
              service:
                name: mediastreamer
                port:
                  number: 3000
          - path: /ytapi
            pathType: Prefix
            backend:
              service:
                name: ytstreamer
                port:
                  number: 8000
          - path: /pserve
            pathType: Prefix
            backend:
              service:
                name: staticserver
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-service
                port:
                  number: 32400
          - path: /copyparty
            pathType: Prefix
            backend:
              service:
                name: copyparty
                port:
                  number: 80
